--- a/index.html
+++ b/index.html
@@ -359,7 +359,27 @@
     				</div>
   				</div>
 
-    			<div class="col-md-8">
+				  <div class="col-md-8">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project7.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#">Food Delivery Website</a></h3>
+	    					<span>Developed a food delivery website using MERN stack: Implemented user authentication, item browsing, and ordering functionality.</span>
+	    				</div>
+    				</div>
+  				</div>
+
+				  <div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project8.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#">Netflix Clone</a></h3>
+	    					<span>Developed a Netflix clone using React and TMDB API: Implemented dynamic movie retrieval and display.</span>
+	    				</div>
+    				</div>
+  				</div>
+
+				  <div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project3.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -367,7 +387,9 @@
 	    					<span>Developed a cryptocurrency exchange platform with a sleek, user-friendly interface for seamless trading.</span>
 	    				</div>
     				</div>
+  				</div>
 
+				  <div class="col-md-8">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project6.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -375,29 +397,27 @@
 	    					<span>Created an engaging and visually appealing tours website, featuring detailed itineraries, booking options, and stunning travel photography to inspire and attract travelers.</span>
 	    				</div>
     				</div>
-    			</div>
-    			<div class="col-md-4">
-    				<div class="row">
-    					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project4.jpg);">
-		    					<div class="overlay"></div>
-			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Chit Fund App</a></h3>
-			    					<span>Built with Flutter Flow, created to streamline chit fund management with an intuitive interface.</span>
-			    				</div>
-		    				</div>
-	    				</div>
-	    				<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project5.png);">
-		    					<div class="overlay"></div>
-			    				<div class="text text-center p-4">
-			    					<h3><a href="#">GYM Website</a></h3>
-			    					<span>Designed and developed a dynamic and user-friendly website for a gym</span>
-			    				</div>
-		    				</div>
+  				</div>
+
+				  <div class="col-md-8">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project4.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#">Chit Fund App</a></h3>
+	    					<span>Built with Flutter Flow, created to streamline chit fund management with an intuitive interface.</span>
 	    				</div>
     				</div>
-    			</div>
+  				</div>
+
+				  <div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project5.jpeg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#">GYM Website</a></h3>
+	    					<span>Designed and developed a dynamic and user-friendly website for a gym.</span>
+	    				</div>
+    				</div>
+  				</div>
     		</div>
     	</div>
     </section>
